reports/chapter-11.log
Traceback (most recent call last):
  File "/Users/kootsoop/opt/anaconda3/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Users/kootsoop/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/kootsoop/opt/anaconda3/lib/python3.9/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/kootsoop/opt/anaconda3/lib/python3.9/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/kootsoop/opt/anaconda3/lib/python3.9/asyncio/base_events.py", line 647, in run_until_complete
    return future.result()
  File "/Users/kootsoop/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/kootsoop/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/kootsoop/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
with schemdraw.Drawing(file='realistic-resistor.svg') as d:
    d += elm.Inductor().label('$L_{\ell}$', loc='bot')
    d.push()
    d += elm.Resistor().label('$R$', loc='bot')
    d += elm.Inductor().label('$L_S$', loc='bot')
    d += elm.Inductor().label('$L_{\ell}$', loc='bot')
    d.pop()
    d += elm.Line().up().length(2)
    d += elm.Capacitor().label('$C_P$').length(6).right()
    d += elm.Line().down().length(2)
with schemdraw.Drawing(file='realistic-inductor.svg') as d:
    d += elm.Line()
    d.push()
    d += elm.Resistor().label('$R_S$', loc='bot')
    d += elm.Inductor().label('$L$', loc='bot')
    d += elm.Line()
    d.pop()
    d += elm.Line().up().length(2)
    d += elm.Capacitor().label('$C_P$').length(6).right()
    d += elm.Line().down().length(2)
 with schemdraw.Drawing(file='realistic-capacitor.svg') as d:
    d += elm.Resistor().label('$R_S$', loc='bot')
    d += elm.Capacitor().label('$C$')
    d += elm.Inductor().label('$L_S$', loc='bot')
------------------

[0;36m  File [0;32m"<tokenize>"[0;36m, line [0;32m21[0m
[0;31m    with schemdraw.Drawing(file='realistic-capacitor.svg') as d:[0m
[0m    ^[0m
[0;31mIndentationError[0m[0;31m:[0m unindent does not match any outer indentation level

IndentationError: unindent does not match any outer indentation level (<tokenize>, line 21)

